# AURPy

./: .gitignore  README.md  aur_helper_py.py  main.py  pyproject.toml  util.py
src/: aurpy.py  console.py  main.py  util.py
src/aurpy/: aurpy.py
