[build-system]
requires = ["hatchling", "requests", "rich"]
build-backend = "hatchling.build"

[project]
name = "ArchAurPy"
version = "0.0.1"
authors = [
  { name = "Suraj Kareppagol", email = "surajkareppagol.social@gmail.com" },
]
description = "Arch AUR helper written in python."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/surajkareppagol/arch-aur-py"
"Bug Tracker" = "https://github.com/surajkareppagol/arch-aur-py/issues"
