[tool.poetry]
name = "AURPy"
version = "0.1.0"
description = "Arch AUR Helper Written In Python."
authors = ["surajkareppagol <surajkareppagol.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
rich = "^13.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
